@@ -107,7 +107,7 @@ static void bind_rowid1_set(oci8_bind_t *base, VALUE val)
 }
 
 #define BIND_ROWID1_SIZE (sizeof(oci8_vstr_t) + MAX_ROWID_LEN)
-static void bind_rowid1_init(oci8_bind_t *base, VALUE svc, VALUE *val, VALUE length, VALUE prec, VALUE scale)
+static void bind_rowid1_init(oci8_bind_t *base, VALUE svc, VALUE *val, VALUE length)
 {
     oci8_vstr_t *vstr = xmalloc(BIND_ROWID1_SIZE);
     base->valuep = vstr;
@@ -264,7 +264,7 @@ static void bind_rowid2_set(oci8_bind_t *base, VALUE val)
     handle->obj = val;
 }
 
-static void bind_rowid2_init(oci8_bind_t *base, VALUE svc, VALUE *val, VALUE length, VALUE prec, VALUE scale)
+static void bind_rowid2_init(oci8_bind_t *base, VALUE svc, VALUE *val, VALUE length)
 {
     oci8_bind_handle_t *handle = (oci8_bind_handle_t *)base;
     base->valuep = &handle->hp;
